--- a/src/containers/pages/Category/CategoryItemPage/ItemData.scss
+++ b/src/containers/pages/Category/CategoryItemPage/ItemData.scss
@@ -33,7 +33,7 @@
     flex-direction : column;
     justify-content: flex-start;
     gap            : 10px;
-    font-size      : 20px;
+    font-size      : 18px;
 
     .short-info {
       display: flex;
@@ -45,6 +45,12 @@
 
       .data {
         width: 68%;
+
+        span {
+          &:hover {
+            cursor: pointer;
+          }
+        }
       }
     }
 
