--- a/src/custom/GlobalStyles/GlobalStyles.scss
+++ b/src/custom/GlobalStyles/GlobalStyles.scss
@@ -16,6 +16,7 @@ html {
   &::-webkit-scrollbar {
     border-radius: 0;
     width        : 5px;
+    display      : none;
   }
 
   &::-webkit-scrollbar-thumb {
@@ -45,19 +46,20 @@ a {
 }
 
 label {
-  font-size: 18px;
+  font-size  : 18px;
   font-weight: 600;
 }
 
-input, select {
+input,
+select {
   outline    : none;
   border     : none;
   line-height: 1.5;
 }
 
 textarea {
-  resize: none;
-  outline    : none;
+  resize : none;
+  outline: none;
 
   &::-webkit-scrollbar {
     border-radius: 0;
@@ -84,6 +86,7 @@ button {
   &:has(.ReactModal__Content--after-open > .light) {
     background-color: rgba(255, 255, 255, 0.75) !important;
   }
+
   &:has(.ReactModal__Content--after-open > .dark) {
     background-color: rgba(0, 0, 0, 0.75) !important;
   }
